feat: Implement download service with GitHub/NPM/Website support
- Add DownloadManagerService with queue management
- Add StorageService for file operations
- Add API endpoints for download tasks
- Add TypeScript types and database schema
- Add unit tests
- Fix TypeScript errors (591569)

--- a/package.json
+++ b/package.json
@@ -87,12 +87,14 @@
     "@types/react-dom": "^18.2.0",
     "@types/redis": "^4.0.10",
     "@vercel/speed-insights": "^1.2.0",
+    "aws-sdk": "^2.1693.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "fastify": "^4.29.1",
+    "file-type": "^21.3.0",
     "firebase": "^10.7.1",
     "firebase-admin": "^13.5.0",
     "google-auth-library": "^10.5.0",
