Add Docker environment config with service names

--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,18 @@
 NODE_ENV=production
 NODE_OPTIONS=--max_old_space_size=4096
 
+# Database PostgreSQL (Docker)
+DATABASE_URL=postgresql://twinmcp_user:twinmcp_password@postgres:5432/twinmcp_dev
+DIRECT_DATABASE_URL=postgresql://twinmcp_user:twinmcp_password@postgres:5432/twinmcp_dev
+
+# Redis (Docker)
+REDIS_URL=redis://redis:6379
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+# Qdrant Vector Store (Docker)
+QDRANT_URL=http://qdrant:6333
+
 # Configuration Firebase (à remplacer par vos vraies valeurs)
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyARx0XMtmA8aQ6iXKNGgMySnNlRNIf47VU
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=studio-3830496577-209fb.firebaseapp.com
