--- a/package.json
+++ b/package.json
@@ -87,7 +87,6 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@stripe/react-stripe-js": "^2.2.0",
     "@stripe/stripe-js": "^2.2.0",
-    "@tiptap/collaboration": "^2.8.0",
     "@tiptap/core": "^2.8.0",
     "@tiptap/extension-collaboration": "^2.8.0",
     "@tiptap/extension-collaboration-cursor": "^2.8.0",
@@ -135,7 +134,7 @@
     "prisma": "5.0.0",
     "prometheus-client": "^0.1.1",
     "puppeteer": "^24.35.0",
-    "qdrant-js": "^1.0.1",
+    "@qdrant/js-client-rest": "^1.12.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
