--- a/.env.production
+++ b/.env.production
@@ -14,14 +14,13 @@ REDIS_PORT=6379
 # Qdrant Vector Store (Docker)
 QDRANT_URL=http://qdrant:6333
 
-# Configuration Firebase (à remplacer par vos vraies valeurs)
+# Configuration Firebase
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyARx0XMtmA8aQ6iXKNGgMySnNlRNIf47VU
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=studio-3830496577-209fb.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=studio-3830496577-209fb
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=studio-3830496577-209fb.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123456789012
-NEXT_PUBLIC_FIREBASE_APP_ID=1:123456789012:web:abcdef1234567890abcdef
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-ABCDEFGHIJ
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=studio-3830496577-209fb.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=266171113451
+NEXT_PUBLIC_FIREBASE_APP_ID=1:266171113451:web:3298dfa9404835f41943ae
 
 # Configuration Stripe (si nécessaire)
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your-stripe-publishable-key
