--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@octokit/webhooks": "^14.2.0",
     "@pinecone-database/pinecone": "^6.1.3",
     "@prisma/client": "5.0.0",
+    "@qdrant/js-client-rest": "^1.12.0",
     "@radix-ui/react-tabs": "^1.1.13",
     "@stripe/react-stripe-js": "^2.2.0",
     "@stripe/stripe-js": "^2.2.0",
@@ -91,6 +92,7 @@
     "@tiptap/extension-collaboration": "^2.8.0",
     "@tiptap/extension-collaboration-cursor": "^2.8.0",
     "@tiptap/react": "^2.8.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.16.0",
     "@types/react": "^18.2.0",
@@ -101,6 +103,7 @@
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "cloudflare-api": "^1.0.2",
     "clsx": "^2.1.1",
@@ -110,22 +113,17 @@
     "fastify": "^4.29.1",
     "file-type": "^21.3.0",
     "firebase": "^10.7.1",
-    "fuse.js": "^7.0.0",
-    "leven": "^4.0.0",
-    "nanoid": "^5.0.7",
-    "natural": "^8.0.1",
-    "sharp": "^0.33.5",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "string-similarity": "^4.0.4",
-    "tar-stream": "^3.1.7",
     "firebase-admin": "^13.5.0",
+    "fuse.js": "^7.0.0",
     "google-auth-library": "^10.5.0",
     "googleapis": "^167.0.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
+    "leven": "^4.0.0",
     "lucide-react": "^0.300.0",
     "mime-types": "^3.0.2",
+    "nanoid": "^5.0.7",
+    "natural": "^8.0.1",
     "next": "^15.0.0",
     "next-auth": "^4.24.7",
     "nodemailer": "^7.0.12",
@@ -134,14 +132,18 @@
     "prisma": "5.0.0",
     "prometheus-client": "^0.1.1",
     "puppeteer": "^24.35.0",
-    "@qdrant/js-client-rest": "^1.12.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "redis": "^5.10.0",
+    "sharp": "^0.33.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
+    "string-similarity": "^4.0.4",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.4.0",
+    "tar-stream": "^3.1.7",
     "tiktoken": "^1.0.22",
     "typescript": "^5.3.3",
     "uuid": "^13.0.0",
