--- a/.env.production
+++ b/.env.production
@@ -22,15 +22,10 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=studio-3830496577-209fb.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=266171113451
 NEXT_PUBLIC_FIREBASE_APP_ID=1:266171113451:web:3298dfa9404835f41943ae
 
-# Configuration Stripe (remplacez par vos vraies clés en local uniquement)
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
-STRIPE_SECRET_KEY=your_stripe_secret_key
-STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
-
-# Stripe Price IDs (placeholders)
-STRIPE_PRO_MONTHLY_PRICE_ID=your_stripe_pro_monthly_price_id
-STRIPE_PRO_YEARLY_PRICE_ID=your_stripe_pro_yearly_price_id
-
+# Configuration Stripe (si nécessaire)
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your-stripe-publishable-key
+STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key
+STRIPE_WEBHOOK_SECRET=whsec_your-stripe-webhook-secret
 
 # Autres variables d'environnement
 NEXT_TELEMETRY_DISABLED=1
