amelioration et ajout du serveur http 3001

--- a/.env.local
+++ b/.env.local
@@ -59,3 +59,10 @@ CI=false
 
 # Désactiver les mises à jour automatiques de Next.js
 DISABLE_NEXT_JS_TELEMETRY=1
+
+# TwinMCP HTTP Server Configuration
+TWINMCP_PORT=3001
+TWINMCP_HOST=0.0.0.0
+TWINMCP_API_BASE_URL=http://localhost:3000
+TWINMCP_INTERNAL_KEY=twinmcp_internal_dev_key_2024
+TWINMCP_CORS_ORIGINS=*
