--- a/package.json
+++ b/package.json
@@ -40,6 +40,12 @@
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
+    "docker:mcp": "docker-compose up -d mcp-server",
+    "docker:all": "docker-compose up -d app mcp-server",
+    "mcp:http": "node packages/mcp-server/dist/start-http-server.js",
+    "mcp:http:dev": "npm run --prefix packages/mcp-server dev:http",
+    "mcp:build": "npm run --prefix packages/mcp-server build",
+    "start:all": "node scripts/start-all.js",
     "health:db": "tsx scripts/health-check.ts",
     "health:redis": "redis-cli ping",
     "vector:setup": "tsx scripts/vector-store-setup.ts",
@@ -59,9 +65,12 @@
     "build:analyze": "cross-env ANALYZE=true NODE_OPTIONS='--max-old-space-size=8192' next build",
     "build:firebase": "cross-env NODE_ENV=production NODE_OPTIONS='--max-old-space-size=8192' next build",
     "optimize": "npm run build && next-sitemap",
-    "predeploy": "npm run build:firebase",
+    "predeploy": "npm run build:firebase && npm run mcp:build",
     "deploy": "firebase deploy --only hosting",
     "deploy:ci": "npm ci --legacy-peer-deps && npm run build:firebase && firebase deploy --only hosting",
+    "deploy:mcp": "gcloud builds submit --config=cloudbuild.mcp.yaml",
+    "deploy:all": "npm run deploy && npm run deploy:mcp",
+    "deploy:docker": "docker-compose up -d --build app mcp-server",
     "fix": "npm install --legacy-peer-deps && npm dedupe"
   },
   "dependencies": {
