--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,32 @@ services:
     networks:
       - twinmcp-network
 
+  mcp-server:
+    build:
+      context: ./packages/mcp-server
+      dockerfile: Dockerfile
+    container_name: twinmcp-mcp-server
+    restart: unless-stopped
+    ports:
+      - "3001:3001"
+    environment:
+      - NODE_ENV=production
+      - TWINMCP_PORT=3001
+      - TWINMCP_HOST=0.0.0.0
+      - TWINMCP_API_BASE_URL=http://app:3000
+      - TWINMCP_INTERNAL_KEY=${TWINMCP_INTERNAL_KEY:-twinmcp_internal_key}
+      - TWINMCP_CORS_ORIGINS=*
+    depends_on:
+      - app
+    networks:
+      - twinmcp-network
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+
   postgres:
     image: postgres:15-alpine
     container_name: twinmcp-postgres
