--- a/packages/mcp-server/package.json
+++ b/packages/mcp-server/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "twinmcp-server": "dist/cli.js"
+    "twinmcp-server": "dist/cli.js",
+    "twinmcp-http": "dist/start-http-server.js"
   },
   "files": [
     "dist",
@@ -15,9 +16,11 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "dev": "ts-node src/index.ts",
+    "dev": "ts-node --esm src/index.ts",
+    "dev:http": "npm run build && node dist/start-http-server.js",
     "start": "node dist/index.js",
-    "cli": "ts-node src/cli.ts",
+    "start:http": "node dist/start-http-server.js",
+    "cli": "ts-node --esm src/cli.ts",
     "test": "jest",
     "lint": "eslint src --ext .ts",
     "prepublishOnly": "npm run build"
@@ -39,14 +42,17 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
-    "@twinmcp/core": "^1.0.0",
     "zod": "^3.22.0",
     "pg": "^8.11.0",
     "redis": "^4.6.0",
-    "fast-levenshtein": "^3.0.0"
+    "fast-levenshtein": "^3.0.0",
+    "express": "^4.18.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/express": "^4.17.0",
+    "@types/cors": "^2.8.0",
     "typescript": "^5.0.0",
     "ts-node": "^10.0.0",
     "jest": "^29.0.0",
