feat: deep audit — fix downloads routes, GitHub import UI, external MCP servers (Story 10.10 + 10.12)
- Fix .gitignore and tsconfig.json excluding app/api/downloads/ routes
- Fix dashboard MCP status to use /api/v1/mcp/health endpoint
- Fix redundant instanceof Error checks in downloads routes
- Add GitHub import UI section to dashboard (Story 10.10 A.6)
- Add External MCP Servers full feature (Story 10.12):
  - Prisma schema: ExternalMcpServer + ExternalMcpUsageLog models
  - Service with CRUD, health check, proxy, AES-256-GCM encryption
  - API routes: list, create, get, update, delete, health, proxy, usage
  - Dashboard UI page with server management
  - Nav link in dashboard sidebar
  - Migration SQL for new tables
- Replace mocked MCP configurations with real Prisma queries
- Add new routes to middleware SELF_AUTH_ROUTES whitelist
- 0 new TypeScript errors

--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,8 @@ next-env.d.ts
 mcp-server-demo
 **/mcp-server-demo/**
 
-# local downloads cache
-downloads/
+# local downloads cache (only root-level, not app/api/downloads/)
+/downloads/
 
 # Environment files
 *.env
