--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,7 +57,6 @@
     "**/dist/**",
     "Projet/**",
     "*.tsbuildinfo",
-    "downloads/**",
-    "**/downloads/**"
+    "./downloads/**"
   ]
 }
